# flow_planning

./: .gitignore  README.md  pyproject.toml
config/env/: particle.yaml
config/experiment/: classifier.yaml
config/flow_planning/: base.yaml  cfg.yaml
config/flow_planning/env/: franka.yaml  particle.yaml
config/flow_planning/experiment/: classifier.yaml  flow_planning.yaml  mpd.yaml  vae.yaml
config/flow_planning/model/: transformer.yaml  unet.yaml  vae.yaml
config/rsl_rl/: cfg.yaml
data/urdf/: panda.urdf
flow_planning/: policy.py  runner.py  vae_policy.py
flow_planning/envs/: __init__.py  flow_planning.py  franka.py  ik.py  particle.py  rsl_rl.py
flow_planning/envs/mdp/: __init__.py  actions.py  commands.py  events.py  observations.py
flow_planning/models/: classifier.py  transformer.py  unet.py  vae.py
flow_planning/utils/: __init__.py  data_collector.py  dataset.py  ema.py  fs.py  gp.py  guide.py  ik.py  jit.py  normalizer.py  plotting.py  train_utils.py
scripts/: play.py  record.py  train.py
scripts/flow_planning/: generate_particle_dataset.py  play.py  train.py  train_values.py
scripts/helpers/: generate_particle_dataset.py  hardware_images.py  obstacle_plot.py  test_fk.py  test_ik.py  visualize_dataset.py
scripts/ik/: play.py
scripts/rsl_rl/: play.py
